# taskdeck

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
assets/: taskdeck.desktop
docs/qa/2026-06-11-v1/: phaseA-adversarial-tester.md  phaseA-code-reviewer.md  phaseA-silent-failure-hunter.md  phaseA-test-analyzer.md  phaseB-adversarial-tester.md  phaseB-code-reviewer.md  phaseB-silent-failure-hunter.md  phaseB-test-analyzer.md  phaseC-synthesis.md
docs/qa/2026-06-12-task10/: phaseA-code-reviewer.md  phaseA-test-analyzer.md  phaseB-cross-exam.md  phaseC-synthesis.md
docs/qa/2026-06-13-tray/: qa.md
docs/qa/2026-06-20-calendar/: qa.md
docs/superpowers/plans/: 2026-06-10-taskdeck-v1.md  2026-06-13-tray-notifications.md  2026-06-20-calendar-view.md
docs/superpowers/specs/: 2026-06-10-systemd-task-gui-design.md  2026-06-20-calendar-view-design.md
plasmoid/: README.md  metadata.json
plasmoid/contents/ui/: main.qml
taskdeck/: __main__.py  actions.py  app.py  calendar_model.py  calendar_view.py  main_window.py  models.py  monitor.py  single_instance.py  systemd_client.py  tray.py
tests/: conftest.py  test_actions.py  test_app.py  test_calendar_integration.py  test_calendar_model.py  test_calendar_view.py  test_client.py  test_format.py  test_models.py  test_monitor.py  test_parsing.py  test_real_systemd.py  test_single_instance.py  test_smoke.py  test_tray.py  test_window_logic.py
tests/fakebin/: fake_echo_argv  fake_fail  fake_hang  fake_ok
tests/fixtures/: cal_journal.json  cal_projection.txt  journal.jsonl  list_timers.json  list_units.json  show_results.txt  show_schedules.txt
tools/: screenshot.py
