# Tool configuration only. Deliberately NO [build-system]/[project] packaging:
# every dependency is an RPM in system site-packages, the app runs as
# `python3 -m taskdeck` from the repo root, and adding pip packaging would
# create a second install path to keep in sync for zero benefit (YAGNI).

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# select REPLACES ruff's default rule set (it does not extend it). This set is
# a strict superset of the defaults: pycodestyle E/W, pyflakes F, import
# sorting I, pyupgrade UP, bugbear B. Power of Ten rule 10: strictest
# practical from the first commit.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
# PySide6's RPM ships real type stubs (verified: /usr/lib/python3.14/site-packages/
# PySide6/*.pyi, 57 files), so mypy checks Qt calls against actual signatures —
# no blanket override. If a specific stub gap surfaces, use a targeted
# `# type: ignore[code]` with a reason comment at the call site, never a
# module-wide suppression (Power of Ten rule 10).
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# realsystemd = opt-in tests that hit the REAL user systemd instance
# (read-only). Excluded by default so the suite is hermetic.
addopts = "--strict-markers -m 'not realsystemd'"
markers = ["realsystemd: read-only tests against the real systemd user instance"]
