# Tool configuration only. Deliberately NO [build-system]/[project] packaging:
# every dependency is an RPM in system site-packages, the app runs as
# `python3 -m taskdeck` from the repo root, and adding pip packaging would
# create a second install path to keep in sync for zero benefit (YAGNI).

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# select REPLACES ruff's default rule set (it does not extend it). This set is
# a strict superset of the defaults: pycodestyle E/W, pyflakes F, import
# sorting I, pyupgrade UP, bugbear B. Power of Ten rule 10: strictest
# practical from the first commit.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true
# Fedora's python3-pyside6 RPM ships .pyi stubs (57 files) but OMITS the PEP 561
# py.typed marker, so mypy refuses to use them and errors [import-untyped] on
# every PySide6 import under strict mode (probed 2026-06-10:
# `mypy --strict -c "from PySide6.QtCore import QObject"` fails without this).
# The override makes PySide6 Any-typed — not ideal, but the alternatives are
# worse: creating the marker under /usr/lib needs root, and pip-installing
# stubs adds the second install path the header above forbids. Revisit if the
# RPM ever adds py.typed.
[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# realsystemd = opt-in tests that hit the REAL user systemd instance
# (read-only). Excluded by default so the suite is hermetic.
addopts = "--strict-markers -m 'not realsystemd'"
markers = ["realsystemd: read-only tests against the real systemd user instance"]
